Fix letter-spacing in hope it looks right in Windows

--- a/style.css
+++ b/style.css
@@ -93,4 +93,5 @@ p {
     max-width: 90%;
     line-height: 25px;
     text-align: justify;
+    letter-spacing: 0.01em;
 }
